backend/kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convomark
spec:
  selector:
    matchLabels:
      app: convomark
  template:
    metadata:
      labels:
        app: convomark
    spec:
      containers:
      - name: backend
        image: matteojoliveau/convomark:latest
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 300Mi
            cpu: 300m
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: http
        readinessProbe:
          httpGet:
            path: /ping
            port: http
        command: ["yarn"]
        args: ["start:prod"]
