backend/kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: convomark
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: convomark
